# StarTrader

./: .gitignore  CMakeLists.txt  README.md  main.cpp
common/: CMakeLists.txt  commandline.cpp  commandline.h  commandlineexeptions.h  commandlineoptions.cpp  commandlineoptions.h  common.h  json.cpp  json.h  jsonarray.h  jsonboolean.h  jsoniterable.h  jsonnull.cpp  jsonnull.h  jsonnumber.h  jsonobject.cpp  jsonparseexception.h  jsonparsestream.h  jsonstring.cpp  jsonvalue.h  log.cpp  log.h
common/commandline/: commandline.cpp  commandline.h  commandlineexeptions.cpp
common/configuration/: configuration.cpp  configuration.h
common/json/: json.cpp  json.h  jsonarray.cpp  jsonboolean.cpp  jsonnumber.cpp  jsonobject.h  jsonparsestream.cpp  jsonstring.h
common/log/: log.cpp
common/resource/: resource.cpp  resource.h
data/: CMakeLists.txt  config.json
game/: CMakeLists.txt  controller.cpp  controller.h  game.h  sector.cpp  sector.h  structs.h  world.cpp  world.h
gui/: CMakeLists.txt  eventmanager.cpp  eventmanager.h  gui.cpp  gui.h  keymap.cpp  keymap.h  scene.cpp  scene.h  sdlwindow.cpp  sdlwindow.h  window.h
test/common/: CMakeLists.txt  json.cpp  main.cpp
